smallscreen.css + widescreen.css

--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
     <meta name="description" content="Site Web pour le BDE du CESI.">
     <meta name="author" content="Antoine Casenove, Hugo Le Boennec, Julien Liguori, Lorenzo Nouteau, Antonin Pretet">
     <link rel="stylesheet" href="./assets/vendors/bootstrap/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
 
     <title>BDE.CESI</title>
 
-</head>
+    </head>
 
-<body>
-    <header>
-    </header>
+    <body>
+        <header>
+        </header>
 
-    <main>
-        
-    </main>
+        <main>
+            
+        </main>
 
-    <footer>
-        <div id="copyright" class="copyright"></div>
-    </footer>
+        <footer>
+            <div id="copyright" class="copyright"></div>
+        </footer>
 
-    <script src="./assets/vendors/jquery/jquery-3.3.1.min.js"></script>
-    <script src="./assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-</body>
+        <script src="./assets/vendors/jquery/jquery-3.3.1.min.js"></script>
+        <script src="./assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+    </body>
 
 </html>
