fill rectangles created

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
     <body>
         <header>
+            <div class="black-top-fill-rectangle">&nbsp;</div>
+            <div class="black-rotated-fill-rectangle">&nbsp;</div>
         </header>
 
         <main>
-            
+            <div class="black-left-fill-rectangle">&nbsp;</div>
         </main>
 
         <footer>
