--- a/condition général de vente.html
+++ b/condition général de vente.html
@@ -9,7 +9,7 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <h1>Condition générale de vente</h1>
+        <h1>Conditions générales de ventes</h1>
         <h2>Clause n° 1 : Objet</h2>
             <p>
                 Les conditions générales de vente décrites ci-après détaillent les droits et obligations de LAJAH dans le cadre de la vente de bien sur le site internet www.CESI.BDE.fr .
